[gd_scene load_steps=6 format=3 uid="uid://44b3lqo4rfge"]

[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="1_4d2yb"]
[ext_resource type="Script" path="res://Scripts/UIComponents/TweenableButton.gd" id="2_511jm"]
[ext_resource type="Resource" uid="uid://j6kh7yx0cxvx" path="res://Resources/Audio/OnClickSoundEffect.tres" id="3_2ta5a"]
[ext_resource type="PackedScene" uid="uid://cs4pb1qbaaode" path="res://Scenes/Components/AnimationComponentUI.tscn" id="3_cawim"]
[ext_resource type="PackedScene" uid="uid://h856dh64su3t" path="res://Scenes/UIComponents/SoundEffectComponentUI.tscn" id="4_u6drn"]

[node name="TweenableButton" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -18.0
offset_right = 125.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_4d2yb")
text = "Animated Button"
script = ExtResource("2_511jm")
enter_animation = true
on_click_sound_effect = ExtResource("3_2ta5a")
tween_time = 0.25
tween_transition = 4
tween_ease = 1
tween_position = Vector2(20, 1)
tween_rotation = 0.0
enter_time = 0.69
enter_transition = 11
enter_ease = 2
enter_rotation = 360.0

[node name="AnimationComponent" parent="." instance=ExtResource("3_cawim")]

[node name="SoundEffectComponentUI" parent="." instance=ExtResource("4_u6drn")]
